Design geral foi aprimorado. Usuários podem ver qual o jogo que foi avaliado somente entrando na página de 'Meu perfil'

--- a/css/game-detail.css
+++ b/css/game-detail.css
@@ -88,7 +88,7 @@
 
 /* Avaliações */
 .review-card {
-  background: #1c1e26;
+  background: #2b2b4b;
   padding: 15px;
   border-radius: 6px;
   margin-bottom: 15px;
