--- a/css/game-detail.css
+++ b/css/game-detail.css
@@ -109,6 +109,13 @@
 /* PAINEL DIREITO */
 .right-panel {
   flex: 1;
+
+  & h2 {
+    border-left: 4px solid #4a90e2;
+    padding-left: 10px;
+    margin-bottom: 10px;
+    font-size: 22px;
+  }
 }
 
 .game-box {
